# final_login

./: .pdm-python  README.md  app.py  docker-compose.yaml  kakao_manager.py  pyproject.toml  requirements.txt  start.sh
src/final_login/: app.py  db.py  db_model.py  kakao_manager.py  log_handler.py  main.py  test_connection.py  token.py  validate.py
src/final_login/routers/: auth.py  consumer.py  kakao.py  sign_up.py  tickets.py
src/final_login/routes/: auth.py  consumer.py  kakao.py  sign_up.py
tests/: parquet.py
