[project]
name = "final_login"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "oddsummer56", email = "oddsummer56@gmail.com"},
]
dependencies = [
    "pymongo>=4.10.1",
    "fastapi>=0.115.6",
    "uvicorn>=0.32.1",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.4",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.19",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pytest.ini_options]
pythonpath = [".", "src"]